--- a/css/main.css
+++ b/css/main.css
@@ -2723,3 +2723,9 @@ span.stButton_gradient,
   border-radius: 100%;
   margin: 10px 0;
 }
+
+.image-overlay{
+  position: absolute;
+  top: 0;
+  right: 0;
+}
