--- a/css/main.css
+++ b/css/main.css
@@ -1496,7 +1496,6 @@ Blog Default
 
 .single-blog.timeline {
   background: #FFFFFF;
-  border: 1px solid #EEEEEE;
   position: relative;
   padding-bottom: 0;
 }
@@ -1675,7 +1674,7 @@ Blog with right sidebar
 }
 
 .single-blog .post-bottom{
-  border-bottom: 1px solid #eeeeee;
+  /*border-bottom: 1px solid #eeeeee;*/
   padding-top: 10px;
   padding-bottom: 10px;
 }
