--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@
   @import url(http://fonts.googleapis.com/css?family=Noto+Sans:400,700);
 
   body {
-    background: #fff;
+    background: #e6f0f8;
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     font-size: 14px;
@@ -79,9 +79,9 @@
   }
 
   .btn-common {
+    background: white;
     font-size: 14px;
-    color: #0099ae;
-    border: 1px solid #0099ae;
+    color: #989898;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
     padding: 10px 25px;
@@ -96,13 +96,11 @@
   }
 
 
-  .btn-common:hover, 
+  .btn-common:hover,
   .btn-common:focus{
     outline: none;
-    background: none;
     box-shadow: none;
-    color: #01707f;
-    border-color:#01707f;
+    border-color:#989898;
   }
 
   .align-right{
@@ -1246,19 +1244,19 @@ Portfolio with right sidebar
 .categories .navbar-stacked li a:hover{
   background: none;
   margin-left: 20px;
-  color: #0099AE;
+  color: #989898;
   opacity: 1;
 }
 
 .categories .navbar-stacked li.active a{
-  color: #0099AE;
+  color: #989898;
   padding-left: 20px;
 }
 
 .categories .navbar-stacked li.active a:before{
   position: absolute;
   content: "";
-  border-color: transparent transparent transparent #0099AE;
+  border-color: transparent transparent transparent #989898;
   border-width: 8px;
   border-style: solid;
   left: 0;
@@ -1304,7 +1302,7 @@ Portfolio with right sidebar
 }
 
 .sidebar-item .media:hover{
-  border-left: 2px solid #0099AE;
+  border-left: 2px solid #989898;
   padding-left: 5px;
   transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
@@ -1313,7 +1311,7 @@ Portfolio with right sidebar
 }
 
 .sidebar-item .media:hover.media .media-body h4 a{
-  color: #0099AE;
+  color: #989898;
   transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -webkit-transition: all 0.3s ease 0s;
@@ -1355,7 +1353,7 @@ Portfolio with right sidebar
 }
 
 .tag-cloud .nav-pills li a:hover{
-  background: #0099AE;
+  background: #989898;
 }
 
 .popular ul.gallery {
@@ -1495,7 +1493,6 @@ Blog Default
 *****************************/
 
 .single-blog.timeline {
-  background: #FFFFFF;
   position: relative;
   padding-bottom: 0;
 }
@@ -1578,7 +1575,7 @@ Blog Default
   border-left-style: solid;
   border-left-width: 1px;
   height: 100%;
-  border-left-color: #0099AE;
+  border-left-color: #989898;
   left: 50%;
   margin-left: -2px;
 }
@@ -1603,28 +1600,8 @@ Blog Default
   position: relative;
 }
 
-.arrow-right:after{
-  position: absolute;
-  right: 1px;
-  content: "";
-  top: 15px;
-  background: url(../images/blog/left.png);
-  width: 43px;
-  height: 54px;
-}
-
 .arrow-left{
   position: relative;
-}
-
-.arrow-left:before{
-  position: absolute;
-  left: -2px;
-  content: "";
-  top: 86px;
-  background: url(../images/blog/right.png);
-  width: 43px;
-  height: 54px;
 }
 
 .post-title {
@@ -1644,11 +1621,11 @@ Blog Default
 .post-content  .post-author a{
   font-weight: 300;
   font-size: 14px;
-  color: #0099AE;
+  color: #989898;
 }
 
 a.read-more{
-  color: #0099AE;
+  color: #989898;
   font-weight: 300;
 }
 
@@ -1657,7 +1634,7 @@ a.read-more:hover{
 }
 
 .post-bottom{
-  border-top: 1px solid #eeeeee;
+  border-top: 1px solid #989898;
   padding-top: 10px;
   margin-top: 20px;
   margin: 20px -20px 0;
@@ -1716,13 +1693,13 @@ Blog with right sidebar
 }
 
 .post-nav li a{
-  color: #0099AE;
+  color: #989898;
   padding: 0;
   text-align: left;
 }
 
 .post-nav li a i{
-  color: #0099AE;
+  color: #989898;
   margin-right: 8px;
 }
 
@@ -1849,7 +1826,7 @@ span.stButton_gradient,
 
 .author-profile .col-sm-2 img{
   width: 100%;
-  border-left: 3px solid #0099AE;
+  border-left: 3px solid #989898;
 }
 
 .author-profile h3{
