styled map, updated faq copy and made titles title case, added favicons

--- a/css/main.css
+++ b/css/main.css
@@ -2788,3 +2788,51 @@ span.stButton_gradient,
   font-weight: bold;
   padding-right: 2em;
 }
+
+#services .container {
+  padding: 3em;
+  background: #ece7f0;
+}
+
+#services .row {
+  background-color: #f5f3f7;
+  position: relative;
+  border: 2px solid white;
+  margin: 0;
+}
+
+#services > div {
+
+}
+
+#services .map-text {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 40%;
+}
+
+#services .map-text > div {
+  position: absolute;
+  top: calc(50% - 160px);
+  /*left: calc(50% - 100px);*/
+}
+
+#services h2 {
+  font-weight: bold;
+}
+
+#services p {
+  font-size: 20px;
+  padding-top: 10px;
+}
+
+#services iframe {
+  margin-top: 5px;
+  margin-left: 5px;
+}
+
+#bandc .col-md-12 {
+  padding: 0;
+}
