--- a/css/main.css
+++ b/css/main.css
@@ -1632,7 +1632,7 @@ a.read-more:hover{
   border-top: 1px solid #989898;
   padding-top: 10px;
   margin-top: 20px;
-  margin: 20px -20px 0;
+  margin: 0px -20px 0;
   padding: 20px 20px 0;
 }
 
@@ -2768,7 +2768,11 @@ span.stButton_gradient,
 }
 
 .fadeInLeft {
-  left: 25%
+  left: 16.666666666%
+}
+
+.fadeInRight {
+  right: -50%;
 }
 
 .private-nav {
@@ -2852,12 +2856,13 @@ span.stButton_gradient,
   position: absolute;
   top: 20px;
   left: 40px;
-  width: 35%;
-  font-weight: bold;
+  width: 55%;
+  font-size: 14pt;
+  font-weight: 200;
 }
 
 .full-width-divider h2 {
-  font-weight: bold;
+  font-weight: normal;
 }
 
 .intro-image {
