--- a/css/main.css
+++ b/css/main.css
@@ -2910,6 +2910,7 @@ span.stButton_gradient,
 
 .intro-image {
   position: relative;
+  background-color: #e6f0f8;
 }
 
 .skip-intro {
@@ -2943,39 +2944,61 @@ span.stButton_gradient,
   background-position: bottom center;
   background-size: auto;
   background-repeat: no-repeat;
-  position: fixed;
+  /*position: fixed;*/
   width: 100%;
-  height: 800px;
   z-index: -1;
-}
-
-#cabin-layer-01 {
-  background-image: url(../images/cabin/Cabin_1_FuzzySnowpsd.png);
-}
-
-#cabin-layer-02 {
-  background-image: url(../images/cabin/Cabin_2_SpotSnow.png);
-}
-
-#cabin-layer-03 {
-  background-image: url(../images/cabin/Cabin_3_CabinandBoards.png);
-}
-
-#cabin-layer-04 {
-  background-image: url(../images/cabin/Cabin_4_Trees.png);
-}
-
-#cabin-layer-05 {
-  background-image: url(../images/cabin/Cabin_5_Mountains.png);
+  left: 0;
 }
 
 #cabin-layer-06 {
   background-image: url(../images/cabin/Cabin_6_Sky.png);
+  position: absolute;
+  top: 0;
+  height: 800px;
+}
+
+#cabin-layer-05 {
+  background-image: url(../images/cabin/Cabin_5_Mountains.png);
+  position: absolute;
+  top: 100px;
+  height: 1000px;
+}
+
+#cabin-layer-04 {
+  background-image: url(../images/cabin/Cabin_4_Trees.png);
+  position: absolute;
+  top: 200px;
+  height: 800px;
+}
+
+#cabin-layer-03 {
+  background-image: url(../images/cabin/Cabin_3_CabinandBoards.png);
+  position: absolute;
+  top: 300px;
+  height: 800px;
+}
+
+#cabin-layer-02 {
+  background-image: url(../images/cabin/Cabin_2_SpotSnow.png);
+  position: absolute;
+  top: -100px;
+  height: 800px;
+}
+
+#cabin-layer-01 {
+  background-image: url(../images/cabin/Cabin_1_FuzzySnowpsd.png);
+  position: absolute;
+  top: -600px;
+  height: 800px;
 }
 
 #cabin {
   position: relative;
-  height: 800px;
+  height: 700px;
   overflow: hidden;
   background-color: transparent;
+}
+
+.timeline-divider {
+  background-color: #e6f0f8;
 }
